Move bitcore-lib to peer dependency
multiple copies of bitcore-lib cannot be installed, so this provents an error when multiple libraries using bitcore-lib are installed.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "gulp": "^3.8.10"
   },
   "dependencies": {
-    "aes": "^0.1.0",
+    "aes": "^0.1.0"
+  },
+  "peerDependencies": {
     "bitcore-lib": "^0.14.0"
   }
 }
